--- a/continuity.experimentation.api/continuity.experimentation.api.gradle
+++ b/continuity.experimentation.api/continuity.experimentation.api.gradle
@@ -1,13 +1,10 @@
 apply plugin: 'java-library'
 
-repositories {
-    jcenter()
-}
-
 dependencies {
-    implementation 'org.apache.commons:commons-math3:3.6.1'
+	compile("org.slf4j:slf4j-api:1.7.25")
+	compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+	testImplementation 'junit:junit:4.12'
 }
 
