--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -49,6 +49,9 @@ subprojects {
 		'org.apache.commons:commons-math3:3.6.1',
 		'commons-pool:commons-pool:1.6'
 		
+		testCompile("org.mockito:mockito-core:2.13.0")
+		testCompile ("org.assertj:assertj-core:3.8.0")
+		
 		testCompile 'junit:junit:4.12'
 	}
 }
