CONT-34: Wait for JMeter to finish a test and collect the results.

--- a/continuity.experimentation.api/continuity.experimentation.api.gradle
+++ b/continuity.experimentation.api/continuity.experimentation.api.gradle
@@ -9,7 +9,10 @@ dependencies {
 	
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.3'
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
-
+	
+	compile group: 'com.rabbitmq', name: 'amqp-client', version: '5.1.1'
+	compile group: 'commons-io', name: 'commons-io', version: '2.5'
+	
 	testImplementation 'junit:junit:4.12'
 }
 
