--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = "continuity.experimentation.root"
 
 include "continuity.experimentation.api"
+include "continuity.experimentation.experiment"
 include "continuity.experimentation.satellite"
 
 /**
