Added utility project for transforming JMeter test plans (.jmx) into the ContinuITy-readable json format.

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = "continuity.experimentation.root"
 
 include "continuity.experimentation.api"
 include "continuity.experimentation.experiment"
+include "continuity.experimentation.jmetertransformation"
 include "continuity.experimentation.satellite"
 
 /**
