--- a/continuity.experimentation.api/continuity.experimentation.api.gradle
+++ b/continuity.experimentation.api/continuity.experimentation.api.gradle
@@ -13,6 +13,8 @@ dependencies {
 	compile group: 'com.rabbitmq', name: 'amqp-client', version: '5.1.1'
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
 	
+	compile group: 'org.influxdb', name: 'influxdb-java', version: '2.7'
+	
 	testImplementation 'junit:junit:4.12'
 }
 
