--- a/continuity.experimentation.api/continuity.experimentation.api.gradle
+++ b/continuity.experimentation.api/continuity.experimentation.api.gradle
@@ -15,6 +15,8 @@ dependencies {
 	
 	compile group: 'org.influxdb', name: 'influxdb-java', version: '2.7'
 	
+	compile group: 'javax.mail', name: 'mail', version: '1.4.7'
+	
 	testImplementation 'junit:junit:4.12'
 }
 
