--- a/continuity.experimentation.jmetertransformation/.settings/org.eclipse.buildship.core.prefs
+++ b/continuity.experimentation.jmetertransformation/.settings/org.eclipse.buildship.core.prefs
@@ -1,3 +1,4 @@
+#Thu Mar 08 14:20:38 CET 2018
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
-connection.project.dir=../continuity.experimentation.api
 eclipse.preferences.version=1
+connection.project.dir=..
