Fix Bug in Prometheus exporter Add config file for test executions

--- a/continuity.experimentation.api/continuity.experimentation.api.gradle
+++ b/continuity.experimentation.api/continuity.experimentation.api.gradle
@@ -20,6 +20,8 @@ dependencies {
 	
 	testImplementation 'junit:junit:4.12'
 	
-	compile group: 'com.github.continuity-project', name: 'continuity.api', version: '1.2.112'
+	compile group: 'com.github.continuity-project', name: 'continuity.api', version: '1.3.121'
+	compile group: 'com.github.continuity-project', name: 'continuity.commons', version: '1.3.121'
+	
 }
 
